added own analytics

--- a/Habet.htm
+++ b/Habet.htm
@@ -197,6 +197,16 @@
           ga('send', 'pageview');
           ga('internal.send', 'pageview');
         </script>  -->
+        <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-86647034-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
         <style type="text/css">.tk-canada-type-gibson{font-family:"canada-type-gibson",sans-serif;}
       </style>
       <style type="text/css">@font-face{font-family:canada-type-gibson;src:url(https://use.typekit.com/af/210116/0000000000000000000156a1/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7) format("woff2");font-weight:700;font-style:normal;}@font-face{font-family:canada-type-gibson;src:url(https://use.typekit.com/af/a15678/0000000000000000000156a0/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i4) format("woff2");font-weight:400;font-style:italic;}@font-face{font-family:canada-type-gibson;src:url(https://use.typekit.com/af/f56899/00000000000000000001569b/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n3) format("woff2");font-weight:300;font-style:normal;}@font-face{font-family:canada-type-gibson;src:url(https://use.typekit.com/af/d556c9/00000000000000000001569d/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4) format("woff2");font-weight:400;font-style:normal;}@font-face{font-family:canada-type-gibson;src:url(https://use.typekit.com/af/fcf23d/00000000000000000001569e/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n6) format("woff2");font-weight:600;font-style:normal;}
@@ -396,16 +406,8 @@
               <div class="bounce3">
               </div>
             </div>
-          </div> <script>var htmlDiv = document.getElementById("rs-plugin-settings-inline-css"); var htmlDivCss="";
-          if(htmlDiv) {
-           htmlDiv.innerHTML = htmlDiv.innerHTML + htmlDivCss;
-         }else{
-           var htmlDiv = document.createElement("div");
-           htmlDiv.innerHTML = "<style>" + htmlDivCss + "
-         </style>";
-         document.getElementsByTagName("head")[0].appendChild(htmlDiv.childNodes[0]);
-       }
-        </script> <script type="text/javascript">/******************************************
+          </div> 
+           <script type="text/javascript">/******************************************
 				-	PREPARE PLACEHOLDER FOR SLIDER	-
        ******************************************/
 
