change link to next.html

--- a/Habet.htm
+++ b/Habet.htm
@@ -197,16 +197,7 @@
           ga('send', 'pageview');
           ga('internal.send', 'pageview');
         </script>  -->
-        <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-86647034-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
+        
         <style type="text/css">.tk-canada-type-gibson{font-family:"canada-type-gibson",sans-serif;}
       </style>
       <style type="text/css">@font-face{font-family:canada-type-gibson;src:url(https://use.typekit.com/af/210116/0000000000000000000156a1/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n7) format("woff2");font-weight:700;font-style:normal;}@font-face{font-family:canada-type-gibson;src:url(https://use.typekit.com/af/a15678/0000000000000000000156a0/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i4) format("woff2");font-weight:400;font-style:italic;}@font-face{font-family:canada-type-gibson;src:url(https://use.typekit.com/af/f56899/00000000000000000001569b/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n3) format("woff2");font-weight:300;font-style:normal;}@font-face{font-family:canada-type-gibson;src:url(https://use.typekit.com/af/d556c9/00000000000000000001569d/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4) format("woff2");font-weight:400;font-style:normal;}@font-face{font-family:canada-type-gibson;src:url(https://use.typekit.com/af/fcf23d/00000000000000000001569e/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n6) format("woff2");font-weight:600;font-style:normal;}
@@ -259,7 +250,7 @@
       </a>
     </li>
     <li>
-      <a class="one-dot-link" data-index="11" href="http://aimyapp.com/#updated">
+      <a class="one-dot-link" data-index="11" href="https://saml0616.github.io/Habet/next.html">
         <span class="cd-dot-cont">
           <span class="cd-dot">
           </span>
@@ -298,7 +289,7 @@
               <div class="nav navbar-nav navbar-main navbar-nav-last">
                 <ul id="menu-hoofdnavigatie" class="menu-primary-inner menu-smart sm" data-smartmenus-id="14779519554695166">
                   <li id="menu-item-323" class="menu-item-button" style = "width: 220px;">
-                    <a href="http://aimyapp.com/#updated" style="height: 56px;" data-title="Sign me up" title="Sign me up">
+                    <a href="https://saml0616.github.io/Habet/next.html" style="height: 56px;" data-title="Sign me up" title="Sign me up">
                       <div class="menu-btn-table">
                         <div class="menu-btn-cell">
                           <div class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-323 menu-btn-container btn" style="font-size: 26px !important; letter-spacing: 0; background-color: white; color: #1899ac; padding: 10px 25px !important; border-radius: 40px;text-transform: none; border-style: solid;border-width: 2px;     border-color: white;">
@@ -375,7 +366,7 @@
                   </div> <div class="tp-parallax-wrap" style="position: absolute; visibility: visible; left: 217px; top: 612px; z-index: 9;">
                   <div class="tp-loop-wrap" style="position:absolute;">
                     <div class="tp-mask-wrap" style="position: absolute; overflow: visible; height: auto; width: auto;">
-                      <a class="tp-caption rev-btn rs-hover-ready" href="http://aimyapp.com/#updated" target="_self" id="slide-1-layer-5" data-x="[&#39;left&#39;,&#39;left&#39;,&#39;left&#39;,&#39;center&#39;]" data-hoffset="[&#39;210&#39;,&#39;260&#39;,&#39;-20&#39;,&#39;-35&#39;]" data-y="[&#39;top&#39;,&#39;top&#39;,&#39;top&#39;,&#39;top&#39;]" data-voffset="[&#39;530&#39;,&#39;460&#39;,&#39;679&#39;,&#39;630&#39;]" data-width="[&#39;205&#39;,&#39;220&#39;,&#39;257&#39;,&#39;257&#39;]" data-height="55" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_hover="o:1;rX:0;rY:0;rZ:0;z:0;s:0;e:Linear.easeNone;" data-style_hover="c:rgba(24, 153, 172, 1.00);bg:rgba(255, 255, 255, 1.00);" data-transform_in="opacity:0;s:300;e:Power2.easeInOut;" data-transform_out="opacity:0;s:300;" data-start="500" data-splitin="none" data-splitout="none" data-actions="" data-responsive_offset="on" data-responsive="off" style="z-index: 9; min-width: 205px; max-width: 205px; white-space: nowrap; font-size: 26px; line-height: 26px; font-weight: 500; color: rgb(255, 255, 255); font-family: gibson; text-align: center; background-color: rgba(0, 0, 0, 0); padding: 12px 35px; border-color: rgb(255, 255, 255); border-style: solid; border-width: 2px; border-radius: 30px; outline: none; box-shadow: none; box-sizing: border-box; margin: 0px 0px 0px 70px; cursor: pointer; visibility: inherit; transition: none; font-style: normal; text-decoration: none; letter-spacing: 0px; min-height: 55px; max-height: 55px; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform-origin: 50% 50% 0px;">Sign me up
+                      <a class="tp-caption rev-btn rs-hover-ready" href="https://saml0616.github.io/Habet/next.html" target="_self" id="slide-1-layer-5" data-x="[&#39;left&#39;,&#39;left&#39;,&#39;left&#39;,&#39;center&#39;]" data-hoffset="[&#39;210&#39;,&#39;260&#39;,&#39;-20&#39;,&#39;-35&#39;]" data-y="[&#39;top&#39;,&#39;top&#39;,&#39;top&#39;,&#39;top&#39;]" data-voffset="[&#39;530&#39;,&#39;460&#39;,&#39;679&#39;,&#39;630&#39;]" data-width="[&#39;205&#39;,&#39;220&#39;,&#39;257&#39;,&#39;257&#39;]" data-height="55" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_hover="o:1;rX:0;rY:0;rZ:0;z:0;s:0;e:Linear.easeNone;" data-style_hover="c:rgba(24, 153, 172, 1.00);bg:rgba(255, 255, 255, 1.00);" data-transform_in="opacity:0;s:300;e:Power2.easeInOut;" data-transform_out="opacity:0;s:300;" data-start="500" data-splitin="none" data-splitout="none" data-actions="" data-responsive_offset="on" data-responsive="off" style="z-index: 9; min-width: 205px; max-width: 205px; white-space: nowrap; font-size: 26px; line-height: 26px; font-weight: 500; color: rgb(255, 255, 255); font-family: gibson; text-align: center; background-color: rgba(0, 0, 0, 0); padding: 12px 35px; border-color: rgb(255, 255, 255); border-style: solid; border-width: 2px; border-radius: 30px; outline: none; box-shadow: none; box-sizing: border-box; margin: 0px 0px 0px 70px; cursor: pointer; visibility: inherit; transition: none; font-style: normal; text-decoration: none; letter-spacing: 0px; min-height: 55px; max-height: 55px; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform-origin: 50% 50% 0px;">Sign me up
                       </a>
                     </div>
                   </div>
@@ -818,7 +809,7 @@ document.getElementsByTagName('head')[0].appendChild(htmlDiv.childNodes[0]);
                                   <div class="uncell  boomapps_vccolumn no-block-padding">
                                     <div class="uncont">
                                       <span class="btn-container">
-                                        <a href="http://aimyapp.com/#updated" class="custom-link btn btn-color-198957 btn-circle btn-outline btn-shadow btn-icon-left" style = "padding: 31px 13px 1px 1px !important">Sign me up
+                                        <a href="https://saml0616.github.io/Habet/next.html" class="custom-link btn btn-color-198957 btn-circle btn-outline btn-shadow btn-icon-left" style = "padding: 31px 13px 1px 1px !important">Sign me up
                                         </a>
                                       </span>
                                     </div>
@@ -1734,7 +1725,7 @@ document.getElementsByTagName('head')[0].appendChild(htmlDiv.childNodes[0]);
                                   <div class="uncell  boomapps_vccolumn no-block-padding" style="border-radius: 50px;">
                                     <div class="uncont">
                                       <span class="btn-container">
-                                        <a href="http://aimyapp.com/#updated" class="custom-link btn btn-color-198957 btn-circle btn-outline btn-shadow btn-icon-left" style = "border-radius: 50px;padding: 31px 13px 1px 1px !important">Sign me up
+                                        <a href="https://saml0616.github.io/Habet/next.html" class="custom-link btn btn-color-198957 btn-circle btn-outline btn-shadow btn-icon-left" style = "border-radius: 50px;padding: 31px 13px 1px 1px !important">Sign me up
                                         </a>
                                       </span>
                                     </div>
