--- a/next.html
+++ b/next.html
@@ -40,11 +40,11 @@
   <meta property="og:url" content="https://saml0616.github.io/Habet/Habet.htm">
   <meta property="og:site_name" content="Habet">
   <meta property="fb:app_id" content="1749232828673788">
-  <meta property="og:image" content="./Habet_files/Habet.png">
+  <meta property="og:image" content="http://i.imgur.com/fI6QC3b.jpg">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:description" content="Bet you can be better!">
   <meta name="twitter:title" content="Habet">
-  <meta name="twitter:image" content="./Habet_files/Habet.png"> <script type="application/ld+json">{"@context":"http:\/\/schema.org","@type":"WebSite","@id":"#website","url":"http:\/\/aimyapp.com\/","name":"Aimy","potentialAction":{"@type":"SearchAction","target":"http:\/\/aimyapp.com\/?s={search_term_string}","query-input":"required name=search_term_string"}}
+  <meta name="twitter:image" content="http://i.imgur.com/fI6QC3b.jpg"> <script type="application/ld+json">{"@context":"http:\/\/schema.org","@type":"WebSite","@id":"#website","url":"http:\/\/aimyapp.com\/","name":"Aimy","potentialAction":{"@type":"SearchAction","target":"http:\/\/aimyapp.com\/?s={search_term_string}","query-input":"required name=search_term_string"}}
 </script> <script type="application/ld+json">{"@context":"http:\/\/schema.org","@type":"Organization","url":"http:\/\/aimyapp.com\/","sameAs":["http:\/\/www.facebook.com\/aimyapp"],"@id":"#organization","name":"Aimy","logo":"http:\/\/aimyapp.com\/wp-content\/uploads\/2016\/06\/Logo-Aimy-kleur-2x.svg"}
 </script> <link rel="dns-prefetch" href="http://fonts.googleapis.com/">
 <link rel="dns-prefetch" href="http://s.w.org/">
