--- a/Habet.htm
+++ b/Habet.htm
@@ -239,7 +239,7 @@
 <body class="home page page-id-32 page-template-default style-color-lxmt-bg smooth-scroller hmenu hmenu-position-right header-full-width main-center-align wpb-js-composer js-comp-ver-4.11.2.1 vc_responsive hide-scrollup" cz-shortcut-listen="true">
   <ul class="onepage-pagination">
     <li>
-      <a class="one-dot-link is-selected" data-index="0" href="http://aimyapp.com/#dreams">
+      <a class="one-dot-link is-selected" data-index="0" href="https://saml0616.github.io/Habet/next.html">
         <span class="cd-dot-cont">
           <span class="cd-dot">
           </span>
@@ -249,7 +249,7 @@
       </a>
     </li>
     <li>
-      <a class="one-dot-link" data-index="5" href="http://aimyapp.com/#covered">
+      <a class="one-dot-link" data-index="5" href="https://saml0616.github.io/Habet/next.html">
         <span class="cd-dot-cont">
           <span class="cd-dot">
           </span>
@@ -371,7 +371,7 @@
                       </div> <div class="tp-parallax-wrap" style="position: absolute; visibility: visible; left: 29px; top: 612px; z-index: 8;">
                       <div class="tp-loop-wrap" style="position:absolute;">
                         <div class="tp-mask-wrap" style="position: absolute; overflow: visible; height: auto; width: auto;">
-                          <a class="tp-caption rev-btn rs-hover-ready" href="http://aimyapp.com/#update" target="_self" id="slide-1-layer-4" data-x="[&#39;left&#39;,&#39;left&#39;,&#39;left&#39;,&#39;center&#39;]" data-hoffset="[&#39;22&#39;,&#39;11&#39;,&#39;30&#39;,&#39;0&#39;]" data-y="[&#39;top&#39;,&#39;top&#39;,&#39;top&#39;,&#39;top&#39;]" data-voffset="[&#39;530&#39;,&#39;460&#39;,&#39;602&#39;,&#39;530&#39;]" data-width="[&#39;205&#39;,&#39;220&#39;,&#39;257&#39;,&#39;257&#39;]" data-height="[&#39;55&#39;,&#39;55&#39;,&#39;56&#39;,&#39;56&#39;]" data-whitespace="[&#39;nowrap&#39;,&#39;nowrap&#39;,&#39;normal&#39;,&#39;normal&#39;]" data-transform_idle="o:1;" data-transform_hover="o:1;rX:0;rY:0;rZ:0;z:0;s:0;e:Linear.easeNone;" data-style_hover="c:rgba(255, 255, 255, 1.00);bg:rgba(255, 255, 255, 0);" data-transform_in="opacity:0;s:300;e:Power2.easeInOut;" data-transform_out="opacity:0;s:300;" data-start="500" data-splitin="none" data-splitout="none" data-actions="" data-responsive_offset="on" data-responsive="off" style="z-index: 8; min-width: 205px; max-width: 205px; white-space: nowrap; font-size: 26px; line-height: 26px; font-weight: 400; color: rgb(24, 153, 172); font-family: gibson; text-align: center; background-color: rgb(255, 255, 255); padding: 12px 35px; border-color: rgb(255, 255, 255); border-style: solid; border-width: 2px; border-radius: 30px; outline: none; box-shadow: none; box-sizing: border-box; cursor: pointer; visibility: inherit; transition: none; font-style: normal; text-decoration: none; margin: 0px; letter-spacing: 0px; min-height: 55px; max-height: 55px; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform-origin: 50% 50% 0px;">Tell me more 
+                          <a class="tp-caption rev-btn rs-hover-ready" href="https://saml0616.github.io/Habet/next.html" target="_self" id="slide-1-layer-4" data-x="[&#39;left&#39;,&#39;left&#39;,&#39;left&#39;,&#39;center&#39;]" data-hoffset="[&#39;22&#39;,&#39;11&#39;,&#39;30&#39;,&#39;0&#39;]" data-y="[&#39;top&#39;,&#39;top&#39;,&#39;top&#39;,&#39;top&#39;]" data-voffset="[&#39;530&#39;,&#39;460&#39;,&#39;602&#39;,&#39;530&#39;]" data-width="[&#39;205&#39;,&#39;220&#39;,&#39;257&#39;,&#39;257&#39;]" data-height="[&#39;55&#39;,&#39;55&#39;,&#39;56&#39;,&#39;56&#39;]" data-whitespace="[&#39;nowrap&#39;,&#39;nowrap&#39;,&#39;normal&#39;,&#39;normal&#39;]" data-transform_idle="o:1;" data-transform_hover="o:1;rX:0;rY:0;rZ:0;z:0;s:0;e:Linear.easeNone;" data-style_hover="c:rgba(255, 255, 255, 1.00);bg:rgba(255, 255, 255, 0);" data-transform_in="opacity:0;s:300;e:Power2.easeInOut;" data-transform_out="opacity:0;s:300;" data-start="500" data-splitin="none" data-splitout="none" data-actions="" data-responsive_offset="on" data-responsive="off" style="z-index: 8; min-width: 205px; max-width: 205px; white-space: nowrap; font-size: 26px; line-height: 26px; font-weight: 400; color: rgb(24, 153, 172); font-family: gibson; text-align: center; background-color: rgb(255, 255, 255); padding: 12px 35px; border-color: rgb(255, 255, 255); border-style: solid; border-width: 2px; border-radius: 30px; outline: none; box-shadow: none; box-sizing: border-box; cursor: pointer; visibility: inherit; transition: none; font-style: normal; text-decoration: none; margin: 0px; letter-spacing: 0px; min-height: 55px; max-height: 55px; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform-origin: 50% 50% 0px;">Tell me more 
                           </a>
                         </div>
                       </div>
@@ -808,7 +808,7 @@ document.getElementsByTagName('head')[0].appendChild(htmlDiv.childNodes[0]);
                                   <div class="uncell  boomapps_vccolumn no-block-padding">
                                     <div class="uncont">
                                       <span class="btn-container">
-                                        <a href="http://aimyapp.com/#covered" class="custom-link btn btn-color-198957 btn-circle btn-shadow btn-icon-left" style = "padding: 31px 13px 1px 1px !important">I'm listening
+                                        <a href="https://saml0616.github.io/Habet/next.html" class="custom-link btn btn-color-198957 btn-circle btn-shadow btn-icon-left" style = "padding: 31px 13px 1px 1px !important">I'm listening
                                         </a>
                                       </span>
                                     </div>
@@ -1724,7 +1724,7 @@ document.getElementsByTagName('head')[0].appendChild(htmlDiv.childNodes[0]);
                                   <div class="uncell  boomapps_vccolumn no-block-padding">
                                     <div class="uncont">
                                       <span class="btn-container">
-                                        <a href="http://aimyapp.com/#covered" class="custom-link btn btn-color-198957 btn-circle btn-shadow btn-icon-left" style = "border-radius: 50px;padding: 31px 13px 1px 1px !important">I'm listening
+                                        <a href="https://saml0616.github.io/Habet/next.html" class="custom-link btn btn-color-198957 btn-circle btn-shadow btn-icon-left" style = "border-radius: 50px;padding: 31px 13px 1px 1px !important">I'm listening
                                         </a>
                                       </span>
                                     </div>
