--- a/Habet.htm
+++ b/Habet.htm
@@ -276,7 +276,7 @@
       <div class="row-menu limit-width">
         <div class="row-menu-inner">
           <div class="col-lg-0 logo-container megamenu-diff middle">
-            <div id="main-logo" class="navbar-header style-light"> <a href="http://aimyapp.com/" class="navbar-brand" data-minheight="50">
+            <div id="main-logo" class="navbar-header style-light"> <a href="https://saml0616.github.io/Habet/next.html" class="navbar-brand" data-minheight="50">
               <div class="logo-image logo-light" data-maxheight="60" style="height: 60px; line-height: 60px;">
                 <img src="./Habet_files/Logo-Aimy-kleur-2x.png" alt="logo" width="1" height="1" class="img-responsive">
               </div>
