--- a/Habet.htm
+++ b/Habet.htm
@@ -570,7 +570,7 @@ document.getElementsByTagName('head')[0].appendChild(htmlDiv.childNodes[0]);
             </div>
           </div>
         </div>
-        <div data-parent="true" class="row-container boomapps_vcrow" data-section="2">
+        <!-- <div data-parent="true" class="row-container boomapps_vcrow" data-section="2">
           <div class="row quad-top-padding no-bottom-padding no-h-padding limit-width row-parent" data-imgready="true">
             <div class="row-inner">
               <div class="pos-top pos-center align_center column_parent col-lg-12 boomapps_vccolumn single-internal-gutter">
@@ -619,8 +619,8 @@ document.getElementsByTagName('head')[0].appendChild(htmlDiv.childNodes[0]);
               </script>
             </div>
           </div>
-        </div>
-        <div data-parent="true" class="row-container boomapps_vcrow" data-section="3">
+        </div> -->
+        <!-- <div data-parent="true" class="row-container boomapps_vcrow" data-section="3">
           <div class="row double-top-padding triple-bottom-padding no-h-padding limit-width row-parent" data-imgready="true">
             <div class="row-inner">
               <div class="pos-top pos-center align_center column_parent col-lg-12 boomapps_vccolumn single-internal-gutter">
@@ -774,7 +774,7 @@ document.getElementsByTagName('head')[0].appendChild(htmlDiv.childNodes[0]);
             </script>
           </div>
         </div>
-      </div>
+      </div> -->
       <div data-parent="true" class="row-container boomapps_vcrow" data-section="4">
         <div class="row quad-top-padding triple-bottom-padding no-h-padding limit-width row-parent" data-imgready="true">
           <div class="row-inner">
