--- a/Habet.htm
+++ b/Habet.htm
@@ -1708,7 +1708,7 @@ document.getElementsByTagName('head')[0].appendChild(htmlDiv.childNodes[0]);
                               <div class="uncont">
                                 <div class="heading-text el-text">
                                   <h2 class="h2 font-weight-600 text-color-nhtu-color">
-                                    <span>Wanna meet Habet?
+                                    <span>Ready to build a Habet?
                                     </span>
                                   </h2>
                                 </div>
@@ -1717,8 +1717,8 @@ document.getElementsByTagName('head')[0].appendChild(htmlDiv.childNodes[0]);
                                 </div>
                                 <div class="row-internal row-container boomapps_vcrow">
                         <div class="row row-child">
-                          <div class="row-inner cols-md-responsive" style="height: 61px; margin-bottom: -1px;">
-                            <div class="pos-top pos-center align_right align_center_mobile column_child col-lg-6 boomapps_vccolumn col-md-50 single-internal-gutter">
+                          <div class="row-inner" style="height: 61px; margin-bottom: -1px;">
+                            <!-- <div class="pos-top pos-center align_right align_center_mobile column_child col-lg-6 boomapps_vccolumn col-md-50 single-internal-gutter">
                               <div class="uncol style-light">
                                 <div class="uncoltable">
                                   <div class="uncell  boomapps_vccolumn no-block-padding">
@@ -1731,8 +1731,8 @@ document.getElementsByTagName('head')[0].appendChild(htmlDiv.childNodes[0]);
                                   </div>
                                 </div>
                               </div>
-                            </div>
-                            <div class="pos-top pos-center align_left align_center_mobile column_child col-lg-6 boomapps_vccolumn col-md-50 single-internal-gutter">
+                            </div> -->
+                            <div class="pos-top pos-center align_center_mobile column_child col-lg-6 boomapps_vccolumn col-md-50 single-internal-gutter">
                               <div class="uncol style-light">
                                 <div class="uncoltable">
                                   <div class="uncell  boomapps_vccolumn no-block-padding" style="border-radius: 50px;">
