--- a/Habet.htm
+++ b/Habet.htm
@@ -36,7 +36,7 @@
   <meta property="og:locale" content="nl_NL">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Habet">
-  <meta property="og:description" content="Stop making excuses, make it happen!">
+  <meta property="og:description" content="You 2.0 starts here!">
   <meta property="og:url" content="https://saml0616.github.io/Habet/Habet.htm">
   <meta property="og:site_name" content="Habet">
   <meta property="fb:app_id" content="1749232828673788">
@@ -364,7 +364,7 @@
                       <div class="tp-parallax-wrap" style="position: absolute; visibility: visible; left: 25px; top: 462px; z-index: 7;">
                         <div class="tp-loop-wrap" style="position:absolute;">
                           <div class="tp-mask-wrap" style="position: absolute; overflow: visible; height: auto; width: auto;">
-                            <p class="tp-caption" id="slide-1-layer-3" data-x="[&#39;left&#39;,&#39;left&#39;,&#39;left&#39;,&#39;left&#39;]" data-hoffset="[&#39;18&#39;,&#39;10&#39;,&#39;40&#39;,&#39;588&#39;]" data-y="[&#39;top&#39;,&#39;top&#39;,&#39;top&#39;,&#39;top&#39;]" data-voffset="[&#39;380&#39;,&#39;330&#39;,&#39;410&#39;,&#39;592&#39;]" data-fontsize="[&#39;30&#39;,&#39;30&#39;,&#39;24&#39;,&#39;24&#39;]" data-width="[&#39;none&#39;,&#39;500&#39;,&#39;250&#39;,&#39;250&#39;]" data-height="[&#39;none&#39;,&#39;120&#39;,&#39;120&#39;,&#39;69&#39;]" data-whitespace="[&#39;nowrap&#39;,&#39;nowrap&#39;,&#39;normal&#39;,&#39;normal&#39;]" data-visibility="[&#39;on&#39;,&#39;on&#39;,&#39;on&#39;,&#39;off&#39;]" data-transform_idle="o:1;" data-transform_in="opacity:0;s:300;e:Power2.easeInOut;" data-transform_out="opacity:0;s:300;" data-start="500" data-splitin="none" data-splitout="none" data-responsive_offset="on" data-responsive="off" style="z-index: 7; white-space: nowrap; font-size: 30px; line-height: 34px; font-weight: 400; color: rgb(255, 255, 255); font-family: gibson; padding: 50px 0px 20px; visibility: inherit; transition: none; border-width: 0px; margin: 40px 0px 0px; letter-spacing: 0px; min-height: 0px; min-width: 0px; max-height: none; max-width: none; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform-origin: 50% 50% 0px;">Stop making excuses, make it happen
+                            <p class="tp-caption" id="slide-1-layer-3" data-x="[&#39;left&#39;,&#39;left&#39;,&#39;left&#39;,&#39;left&#39;]" data-hoffset="[&#39;18&#39;,&#39;10&#39;,&#39;40&#39;,&#39;588&#39;]" data-y="[&#39;top&#39;,&#39;top&#39;,&#39;top&#39;,&#39;top&#39;]" data-voffset="[&#39;380&#39;,&#39;330&#39;,&#39;410&#39;,&#39;592&#39;]" data-fontsize="[&#39;30&#39;,&#39;30&#39;,&#39;24&#39;,&#39;24&#39;]" data-width="[&#39;none&#39;,&#39;500&#39;,&#39;250&#39;,&#39;250&#39;]" data-height="[&#39;none&#39;,&#39;120&#39;,&#39;120&#39;,&#39;69&#39;]" data-whitespace="[&#39;nowrap&#39;,&#39;nowrap&#39;,&#39;normal&#39;,&#39;normal&#39;]" data-visibility="[&#39;on&#39;,&#39;on&#39;,&#39;on&#39;,&#39;off&#39;]" data-transform_idle="o:1;" data-transform_in="opacity:0;s:300;e:Power2.easeInOut;" data-transform_out="opacity:0;s:300;" data-start="500" data-splitin="none" data-splitout="none" data-responsive_offset="on" data-responsive="off" style="z-index: 7; white-space: nowrap; font-size: 30px; line-height: 34px; font-weight: 400; color: rgb(255, 255, 255); font-family: gibson; padding: 50px 0px 20px; visibility: inherit; transition: none; border-width: 0px; margin: 40px 0px 0px; letter-spacing: 0px; min-height: 0px; min-width: 0px; max-height: none; max-width: none; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transform-origin: 50% 50% 0px;">You 2.0 starts here
                             </p>
                           </div>
                         </div>
@@ -793,7 +793,7 @@ document.getElementsByTagName('head')[0].appendChild(htmlDiv.childNodes[0]);
                       </div>
                       <div class="heading-text el-text">
                         <h3 class="h3 font-weight-600 text-color-198957-color">
-                          <span>Do you know what you're aiming for?
+                          <span>Are you ready to build a better you?
                           </span>
                         </h3>
                       </div>
