i hate adam pt3

--- a/Habet.htm
+++ b/Habet.htm
@@ -853,7 +853,7 @@ document.getElementsByTagName('head')[0].appendChild(htmlDiv.childNodes[0]);
                     <div class="uncont">
                       <div class="heading-text el-text">
                         <h2 class="h2 text-color-xsdn-color">
-                          <span>Habet's got you covered
+                          <span>Habet's got your back
                           </span>
                         </h2>
                       </div>
@@ -861,7 +861,7 @@ document.getElementsByTagName('head')[0].appendChild(htmlDiv.childNodes[0]);
                       </div>
                       <div class="heading-text el-text">
                         <h3 class="h3 text-color-xsdn-color">
-                          <span>Building new habit is easier with a little help from your friends.
+                          <span>Build new habits with a little help from your friends.
                           </span>
                         </h3>
                       </div>
@@ -1738,7 +1738,7 @@ document.getElementsByTagName('head')[0].appendChild(htmlDiv.childNodes[0]);
                                   <div class="uncell  boomapps_vccolumn no-block-padding" style="border-radius: 50px;">
                                     <div class="uncont">
                                       <span class="btn-container">
-                                        <a href="https://saml0616.github.io/Habet/next.html" class="custom-link btn btn-color-198957 btn-circle btn-outline btn-shadow btn-icon-left" style = "border-radius: 50px;padding: 31px 13px 1px 1px !important">Sign me up
+                                        <a href="https://saml0616.github.io/Habet/next.html" class="custom-link btn btn-color-198957 btn-circle btn-outline btn-shadow btn-icon-left" style = "border-radius: 50px;padding: 31px 13px 1px 1px !important">I'm ready!
                                         </a>
                                       </span>
                                     </div>
