i hate adam pt4

--- a/next.html
+++ b/next.html
@@ -508,7 +508,8 @@ document.getElementsByTagName('head')[0].appendChild(htmlDiv.childNodes[0]);
               <div class="uncont">
                 <div class="uncode_text_column">
                   <p>
-                    <strong>Made with love at Brandeis
+                    <strong>
+                    <!-- Made with love at Brandeis -->
                     </strong>
                   </p>
                 </div>
